# post-gwas-causal

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  STATUS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: architecture.md  biology.md  index.md  methods.md
docs/adrs/: 0001.md  0002.md  0003.md  index.md
examples/: benchmark_coloc_susie.py
scripts/R/: README.md  coloc.R  mr.R  susie.R
src/post_gwas_causal/: __init__.py  cli.py  rbridge.py  simulate.py
src/post_gwas_causal/coloc/: __init__.py  abf.py  susie.py
src/post_gwas_causal/finemap/: __init__.py  abf.py  susie.py
src/post_gwas_causal/mr/: __init__.py  egger.py  harmonize.py  heterogeneity.py  ivw.py  weighted_median.py
src/post_gwas_causal/prs/: __init__.py  clump_threshold.py  evaluate.py  shrinkage.py
src/post_gwas_causal/twas/: __init__.py  burden.py
tests/: conftest.py
tests/integration/: test_cli.py  test_rbridge.py
tests/unit/: test_coloc.py  test_coloc_susie.py  test_finemap.py  test_mr.py  test_prs.py  test_simulate.py  test_twas.py
