[project]
name = "post-gwas-causal"
version = "0.1.0"
description = "Post-GWAS causal-mechanism toolkit — fine-mapping, colocalization, Mendelian randomization, TWAS, and polygenic risk scoring on summary statistics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Armin Bayati", email = "a.bayati.brain@gmail.com" }]
keywords = ["bioinformatics", "statistical-genetics", "gwas", "fine-mapping", "mendelian-randomization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "pyarrow>=16",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[project.scripts]
post-gwas-causal = "post_gwas_causal.cli:app"

[project.urls]
Homepage = "https://github.com/abayatibrain/post-gwas-causal"
Documentation = "https://abayatibrain.github.io/post-gwas-causal/"
Issues = "https://github.com/abayatibrain/post-gwas-causal/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/post_gwas_causal"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
# typer relies on function-call defaults (typer.Option(...)) by design.
"src/post_gwas_causal/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["src"]

# Scientific-Python libraries that ship without PEP-561 type stubs.
[[tool.mypy.overrides]]
module = [
    "scipy",
    "scipy.*",
    "statsmodels",
    "statsmodels.*",
    "pandas",
    "pandas.*",
    "matplotlib",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
    "requires_r: marks tests that shell out to Rscript (skip when R is absent)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
